K8-Examples/K8-Objects/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment  # Name of the Deployment
spec:
  replicas: 3  # Number of pod replicas to maintain
  selector:
    matchLabels:
      app: nginx  # Label selector to match the pods managed by this Deployment
  template:
    metadata:
      labels:
        app: nginx  # Labels for the pods created by this Deployment
    spec:
      containers:
        - name: nginx  # Name of the container inside the pod
          image: nginx:1.7.9  # Docker image for the container
          ports:
            - containerPort: 80  # Port the container listens on
