K8-Examples/K8-Objects/multicontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-fluentd-pod
  labels:
    app: nginx
spec:
  containers:
    - name: nginx-container
      image: nginx:latest
      volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx
        - name: shared-logs
          mountPath: /var/log/nginx
      ports:
        - containerPort: 80
    - name: fluentd-sidecar
      image: fluent/fluentd:latest
      volumeMounts:
        - name: shared-logs
          mountPath: /var/log/nginx
  volumes:
    - name: shared-logs
      emptyDir: {}
    - name: config-volume
      emptyDir: {}
