K8-Examples/K8-Objects/pv-pvc.yaml

# Define Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app-container
        image: nginx  # Simple web server image
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"  # Mount path in container
          name: storage  # Volume reference name
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: my-app-pvc  # Reference to the PVC defined above
