K8-Examples/K8-Objects/storage-pv-pvc.yaml

#Deployment binds the pvc to pv
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-logging-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: audit-logging
  template:
    metadata:
      labels:
        app: audit-logging
    spec:
      containers:
        - name: audit-logging-container
          image: mybank/audit-logging:1.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /var/log/audit
              name: audit-storage
      volumes:
        - name: audit-storage
          persistentVolumeClaim:
            claimName: trade-audit-pvc
