K8-Examples/K8-Objects/istio--ingress-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service-gw
  namespace: app-service
spec:
  selector:
    istio: ingressgateway # use Istio's default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-service
  namespace: app-service
spec:
  hosts:
  - "*"
  gateways:
  - service-gw
  http:
  - match:
    - uri:
        prefix: /product
    route:
    - destination:
        host: product
        port:
          number: 5678
  - match:
    - uri:
        prefix: /order
    route:
    - destination:
        host: order
        port:
          number: 5678
